--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Pull and push Docker image
         run: |
           docker pull kopia/kopia:${{ env.latest_tag }}
-          docker tag kopia/kopia:${{ env.latest_tag }} ghcr.io/${{ github.repository_owner }}/kopia:${{ env.latest_tag }}
-          docker tag kopia/kopia:${{ env.latest_tag }} ghcr.io/${{ github.repository_owner }}/kopia:latest
-          docker push ghcr.io/${{ github.repository_owner }}/kopia:${{ env.latest_tag }}
-          docker push ghcr.io/${{ github.repository_owner }}/kopia:latest
+          docker tag kopia/kopia:${{ env.latest_tag }} ghcr.io/${{ github.repository_owner }}/kopia-docker-ghcr:${{ env.latest_tag }}
+          docker tag kopia/kopia:${{ env.latest_tag }} ghcr.io/${{ github.repository_owner }}/kopia-docker-ghcr:latest
+          docker push ghcr.io/${{ github.repository_owner }}/kopia-docker-ghcr:${{ env.latest_tag }}
+          docker push ghcr.io/${{ github.repository_owner }}/kopia-docker-ghcr:latest
